[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/story_teller/editor/story_nodes/CommandOptionLine.gd" type="Script" id=1]

[node name="CommandOptionLine" type="MarginContainer"]
margin_right = 231.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_constants/margin_bottom = 5
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
DisplayView = NodePath("DisplayView")
DeleteView = NodePath("DeleteView")
OptionTypeBtn = NodePath("DisplayView/Button")
OptionNameInput = NodePath("DisplayView/LineEdit")
OptionDefaultInput = NodePath("DisplayView/SpinBox")
OptionDeleteBtn = NodePath("DisplayView/Button2")
ConfirmLbl = NodePath("DeleteView/confirmLbl")
YesBtn = NodePath("DeleteView/yesBtn")
NoBtn = NodePath("DeleteView/noBtn")

[node name="DisplayView" type="HBoxContainer" parent="."]
margin_right = 231.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="DisplayView"]
margin_right = 22.0
margin_bottom = 24.0
hint_tooltip = "No Value"
text = "N"

[node name="LineEdit" type="LineEdit" parent="DisplayView"]
margin_left = 26.0
margin_right = 208.0
margin_bottom = 24.0
size_flags_horizontal = 3
align = 1
caret_blink = true
caret_blink_speed = 0.5

[node name="SpinBox" type="SpinBox" parent="DisplayView"]
visible = false
margin_left = -97.0
margin_right = -23.0
margin_bottom = 24.0
step = 0.1
page = 0.5
value = 0.5
allow_greater = true
allow_lesser = true

[node name="Button2" type="Button" parent="DisplayView"]
margin_left = 212.0
margin_right = 231.0
margin_bottom = 24.0
hint_tooltip = "delete"
text = "x"

[node name="DeleteView" type="HBoxContainer" parent="."]
visible = false
margin_right = 231.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="confirmLbl" type="Label" parent="DeleteView"]
margin_top = 7.0
margin_right = 159.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "delete 'Option'?"

[node name="yesBtn" type="Button" parent="DeleteView"]
margin_left = 163.0
margin_right = 197.0
margin_bottom = 29.0
text = "Yes"

[node name="noBtn" type="Button" parent="DeleteView"]
margin_left = 201.0
margin_right = 231.0
margin_bottom = 29.0
text = "No"
